add segmentfault test

--- a/src/makefile
+++ b/src/makefile
@@ -1,4 +1,4 @@
-.PHONY: clean
+.PHONY: clean printcs-test printcs-segmentfault-test
 
 default: printcs-test
 # Define the tools we are going to use
@@ -8,15 +8,21 @@ LD = g++
 LIBS = -lm -lc -lpthread
 CFLAGS = -g -Wall -Wno-unused -Wno-sign-compare -I.
 
+
+printcs-segmentfault-test: printcs_segmentfault_test.o printcs.o
+	$(LD) $(CFLAGS) -o $@ $^ $(LIBS)
+	./printcs-segmentfault-test
+
 printcs-test: printcs_test.o printcs.o
 	$(LD) $(CFLAGS) -o $@ $^ $(LIBS)
 	./printcs-test
 
+printcs_segmentfault_test.o: printcs_segmentfault_test.cc
+	$(CC) $(CFLAGS) -c -o $@ $<
 printcs_test.o: printcs_test.c
 	$(CC) $(CFLAGS) -c -o $@ $< 
-
 printcs.o: printcs.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
-	rm  printcs-test *.o
+	rm -f printcs-test printcs-segmentfault-test *.o
